mp3/extra/grade.txt
mp3 feedback for soslan.21
g++ -std=c++11 -g -O0 -pedantic -Wall -Werror -Wfatal-errors -Wextra -Wno-unused-parameter -Wno-unused-variable -c  cs225/HSLAPixel.cpp -o cs225/HSLAPixel.o
g++ -std=c++11 -g -O0 -pedantic -Wall -Werror -Wfatal-errors -Wextra -Wno-unused-parameter -Wno-unused-variable -c  -fsanitize=address -fno-omit-frame-pointer cs225/HSLAPixel.cpp -o cs225/HSLAPixel.o-asan.o
g++ -std=c++11 -g -O0 -pedantic -Wall -Werror -Wfatal-errors -Wextra -Wno-unused-parameter -Wno-unused-variable -c  cs225/PNG.cpp -o cs225/PNG.o
g++ -std=c++11 -g -O0 -pedantic -Wall -Werror -Wfatal-errors -Wextra -Wno-unused-parameter -Wno-unused-variable -c  -fsanitize=address -fno-omit-frame-pointer cs225/PNG.cpp -o cs225/PNG.o-asan.o
g++ -std=c++11 -g -O0 -pedantic -Wall -Werror -Wfatal-errors -Wextra -Wno-unused-parameter -Wno-unused-variable -c  cs225/lodepng/lodepng.cpp -o cs225/lodepng/lodepng.o
g++ -std=c++11 -g -O0 -pedantic -Wall -Werror -Wfatal-errors -Wextra -Wno-unused-parameter -Wno-unused-variable -c  -fsanitize=address -fno-omit-frame-pointer cs225/lodepng/lodepng.cpp -o cs225/lodepng/lodepng.o-asan.o
g++ -std=c++11 -g -O0 -pedantic -Wall -Werror -Wfatal-errors -Wextra -Wno-unused-parameter -Wno-unused-variable -c    -c -o tests/testmain.o tests/testmain.cpp
g++ -std=c++11 -g -O0 -pedantic -Wall -Werror -Wfatal-errors -Wextra -Wno-unused-parameter -Wno-unused-variable -c    -c -o tests/tests_part1.o tests/tests_part1.cpp
g++ -std=c++11 -g -O0 -pedantic -Wall -Werror -Wfatal-errors -Wextra -Wno-unused-parameter -Wno-unused-variable -c    -c -o tests/tests_part2.o tests/tests_part2.cpp
In file included from tests/../list.h:293,
                 from tests/tests_helper.h:6,
                 from tests/tests_part2.cpp:2:
tests/../list-inl.h: In instantiation of ‘List<T>::ListNode* List<T>::split(List<T>::ListNode*, int) [with T = cs225::HSLAPixel]’:
tests/../list-inl.h:109:33:   required from ‘List<T> List<T>::split(int) [with T = cs225::HSLAPixel]’
tests/tests_part2.cpp:26:38:   required from here
tests/../list-inl.h:153:1: error: no return statement in function returning non-void [-Werror=return-type]
  153 | }
      | ^
compilation terminated due to -Wfatal-errors.
cc1plus: all warnings being treated as errors
make: *** [<builtin>: tests/tests_part2.o] Error 1
Code does not compile.

Total: 0
